# emg-signalomics

./: .gitignore  LICENSE  README.md  pyproject.toml
src/emg_signalomics/: __init__.py
src/emg_signalomics/detect/: __init__.py  atrain.py
src/emg_signalomics/load/: __init__.py
src/emg_signalomics/load/cadwell/: __init__.py  cascade.py
src/emg_signalomics/load/nim/: __init__.py  eclipse.py
