[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emg-signalomics"
version = "0.1.0"
description = "EMG / LFP / EEG signalomics: detection of periodic bursts and related features in single-channel neurophysiological signals."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Martin Cerny", email = "dr.martin.cerny@gmail.com" },
]
keywords = ["EMG", "EEG", "LFP", "signal-processing", "autocorrelation", "A-train", "HFO", "neurophysiology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "mne>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/DrMartinCerny/emg-signalomics"
Repository = "https://github.com/DrMartinCerny/emg-signalomics"
Issues = "https://github.com/DrMartinCerny/emg-signalomics/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
emg_signalomics = ["py.typed"]
